--- a/convert/nbproject/project.properties
+++ b/convert/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=convert
-main.class=convert.CategorizeLicenses
+main.class=convert.Convert
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
