--- a/pp3/composer.json
+++ b/pp3/composer.json
@@ -1,23 +1,22 @@
 {
-    "name": "zendframework/skeleton-application",
-    "description": "Skeleton Application for ZF2",
+    "name": "apache/netbeans-pp3",
+    "description": "NetBeans Plugin Portal 3",
     "license": "BSD-3-Clause",
     "keywords": [
-        "framework",
-        "zf2"
+        "apache",
+        "netbeans",
+        "pluginportal"
     ],
     "config": {
         "discard-changes": true
-    },  
-    "homepage": "http://framework.zend.com/",
+    },
+    "homepage": "https://github.com/apache/netbeans-tools/pp3",
     "require": {
         "php": ">=5.5",
         "zendframework/zendframework": "~2.5",
         "zendframework/zend-developer-tools": "dev-master",
         "doctrine/doctrine-orm-module": "^0.9.1",
         "ezyang/htmlpurifier": "^4.10",
-        "zendframework/zendoauth": "2.0.*",
-        "knplabs/knp-paginator-bundle": "^3.0",
-        "google/apiclient": "^2.4"
+        "knplabs/knp-paginator-bundle": "^3.0"
     }
 }
