graph, improved links

--- a/tutorials-convert/src/main/resources/org/netbeans/tools/tutorials/TutorialsBundle.properties
+++ b/tutorials-convert/src/main/resources/org/netbeans/tools/tutorials/TutorialsBundle.properties
@@ -28,6 +28,8 @@ tutorials.title=NetBeans Platform Tutorials
 73.title=NetBeans 7.3 Platform Tutorials
 74.title=NetBeans 7.4 Platform Tutorials
 80.title=NetBeans 8.0 Platform Tutorials
+graph.title=NetBeans Visual Library 2.0
+10.title=NetBeans Visual Library 1.0
 
 
 cnd.title=C and C++ Tutorials
