--- a/convert/nbproject/project.properties
+++ b/convert/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=convert
-main.class=convert.Convert
+main.class=convert.ConvertAndCopy
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
