Implement apache oauth login
The ASF provides an oauth based login option via:

https://oauth.apache.org

see

https://oauth.apache.org/api.html

for documentation. This change integrates the oauth system and allows
every ASF committer to login using his/her ASF credentials.

--- a/pp3/module/Application/config/module.config.php.dist
+++ b/pp3/module/Application/config/module.config.php.dist
@@ -60,6 +60,14 @@ return array(
             'clientId' => 'DO_NOT_COMMIT',
             'clientSecret' => 'DO_NOT_COMMIT',
             'type' => 'amazon'
+        ),
+        array(
+            'id' => 'apache',
+            'name' => 'Apache',
+            'icon' => '/img/login/apache.svg',
+            'clientId' => 'IGNORED',
+            'clientSecret' => 'IGNORED',
+            'type' => 'apache'
         )
     ),
     'router' => array(
