Generate JS stub files for webcommon/javascript2.editor module from typescript definitions
This generator uses the type definitions files for the JS core
libraries distributed with the typescript compiler to generate the JS
stubs NetBeans uses to provide the user with code completion.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@
 /translations/*/nbproject/private/
 /translations/*/nbproject/genfiles.properties
 /pp3/module/Application/external/osgi-jar-parser/target
+/jsstub-generator/out/
+/jsstub-generator/node_modules/
+/jsstub-generator/nbproject/
+/jsstub-generator/out.old/
