Improve image upload handling for PP3
- Allow the user/admin to remove an existing image
- Prepare the fileselector with a list of relevant files
- Remove old images
- Unify naming of uploaded images

--- a/pp3/module/Application/config/module.config.php.dist
+++ b/pp3/module/Application/config/module.config.php.dist
@@ -36,6 +36,12 @@ return array(
         'dtdPath' => 'http://localhost/checkout/pp3/public/dtd/autoupdate-catalog-2_8.dtd',
         'downloadBaseUrl' => 'http://localhost/pp3/catalogue/download'
     ),
+    'imageTypes' => array (
+        'svg',
+        'png',
+        'jpg',
+        'jpeg'
+    ),
     'loginConfig' => array (
         array(
             'id' => 'github',
