--- a/snap-packages/from-source/snapcraft-template.yaml
+++ b/snap-packages/from-source/snapcraft-template.yaml
@@ -30,7 +30,7 @@ description: |@SNAP_DISCLAIMER@
 icon: snap/gui/frame512.png
 confinement: classic
 grade: @SNAP_GRADE@
-base: core18
+base: core22
 architectures: [ amd64 ]
 compression: lzo
 assumes:
@@ -44,26 +44,28 @@ parts:
     build-packages:
       - git
       - unzip
-      - openjdk-11-jdk-headless
-    plugin: ant
+      - openjdk-17-jdk-headless
+      - ant
+    plugin: nil
     source: https://github.com/apache/netbeans.git
     source-branch: "@SNAP_BRANCH@"
-    filesets:
-        netbeans: [ netbeans/*, -netbeans/*.built, -netbeans/extra ]
     override-build: |
-        export JAVA_HOME="/usr/lib/jvm/java-11-openjdk-amd64"
-        ant -Djavac.compilerargs=-nowarn -Dbuild.compiler.deprecation=false @BUILD_NUMBER@ -Dmetabuild.jsonurl=https://raw.githubusercontent.com/apache/netbeans-jenkins-lib/master/meta/netbeansrelease.json
-        mv nbbuild/netbeans $SNAPCRAFT_PART_INSTALL/netbeans
-        # Make the default cache and data directory relative to Snap user directory
-        sed -i 's/${HOME}\/.netbeans/${SNAP_USER_DATA}/' $SNAPCRAFT_PART_INSTALL/netbeans/bin/netbeans
-        sed -i 's/${HOME}\/.cache\/netbeans/${SNAP_USER_COMMON}\/${SNAP_REVISION}/' $SNAPCRAFT_PART_INSTALL/netbeans/bin/netbeans
-        sed -i 's/"${DEFAULT_USERDIR_ROOT}\/.*"/"${DEFAULT_USERDIR_ROOT}"/g' $SNAPCRAFT_PART_INSTALL/netbeans/etc/netbeans.conf
-        sed -i 's/"${DEFAULT_CACHEDIR_ROOT}\/.*"/"${DEFAULT_CACHEDIR_ROOT}"/g' $SNAPCRAFT_PART_INSTALL/netbeans/etc/netbeans.conf        
-        sed -i 's/-J-Dapple.laf.useScreenMenuBar=true/-J-Dplugin.manager.install.global=false/' $SNAPCRAFT_PART_INSTALL/netbeans/etc/netbeans.conf
-        chmod a+r $SNAPCRAFT_PART_INSTALL/netbeans/etc/netbeans.conf
-        find $SNAPCRAFT_PART_INSTALL/netbeans -type f -name *.sh -exec chmod a+rx {} \;
+        set -x
+        export JAVA_HOME="/usr/lib/jvm/java-17-openjdk-amd64"
+        export ANT_OPTS="-Djavac.compilerargs=-nowarn -Dbuild.compiler.deprecation=false @BUILD_NUMBER@ -Dmetabuild.jsonurl=https://raw.githubusercontent.com/apache/netbeans-jenkins-lib/master/meta/netbeansrelease.json"
+        ant build \
+        && mv nbbuild/netbeans $SNAPCRAFT_PART_INSTALL/netbeans \
+        && sed -i 's/${HOME}\/.netbeans/${SNAP_USER_DATA}/' $SNAPCRAFT_PART_INSTALL/netbeans/bin/netbeans \
+        && sed -i 's/${HOME}\/.cache\/netbeans/${SNAP_USER_COMMON}\/${SNAP_REVISION}/' $SNAPCRAFT_PART_INSTALL/netbeans/bin/netbeans \
+        && sed -i 's/"${DEFAULT_USERDIR_ROOT}\/.*"/"${DEFAULT_USERDIR_ROOT}"/g' $SNAPCRAFT_PART_INSTALL/netbeans/etc/netbeans.conf \
+        && sed -i 's/"${DEFAULT_CACHEDIR_ROOT}\/.*"/"${DEFAULT_CACHEDIR_ROOT}"/g' $SNAPCRAFT_PART_INSTALL/netbeans/etc/netbeans.conf \
+        && sed -i 's/-J-Dapple.laf.useScreenMenuBar=true/-J-Dplugin.manager.install.global=false/' $SNAPCRAFT_PART_INSTALL/netbeans/etc/netbeans.conf \
+        && chmod a+r $SNAPCRAFT_PART_INSTALL/netbeans/etc/netbeans.conf \
+        && find $SNAPCRAFT_PART_INSTALL/netbeans -type f -name *.sh -exec chmod a+rx {} \;
     stage:
-        - $netbeans
+        - netbeans/*
+        - -netbeans/*.built
+        - -netbeans/extra
 
   launchers:
     source: snap/local/launchers
