Snap: Patch custom netbeans.conf in existing userdir

--- a/snap-packages/from-zip/snapcraft-template.yaml
+++ b/snap-packages/from-zip/snapcraft-template.yaml
@@ -71,5 +71,6 @@ apps:
   netbeans:
     command-chain:
       - launchers/userdir-cleanup
+      - launchers/patch-netbeans-conf
     command: netbeans/bin/netbeans
 
