--- a/snap-packages/from-source/snapcraft-template.yaml
+++ b/snap-packages/from-source/snapcraft-template.yaml
@@ -74,5 +74,6 @@ apps:
   netbeans:
     command-chain:
       - launchers/userdir-cleanup
+      - launchers/patch-netbeans-conf
     command: netbeans/bin/netbeans
 
